--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,38 @@
-# Core dependencies
-chainlit==1.0.505
-pydantic==2.5.0
-python-dotenv==1.0.0
-aiohttp==3.9.1
-asyncio==3.4.3
+# Scholarship Advisor - Optimized Requirements
+# Compatible versions tested for Python 3.8-3.12
 
-# Together AI
-openai==1.6.1  # Together AI compatible
+# Core Framework
+chainlit==1.1.402
+pydantic==2.8.2
+python-dotenv==1.0.1
 
-# File processing
-python-docx==1.1.0  # DOCX processing
-Pillow==10.1.0  # Image processing
+# AI & LLM
+openai==1.40.6
 
-# Web scraping and search
-requests==2.31.0
-beautifulsoup4==4.12.2
-serpapi==0.1.5
+# Async HTTP & Web
+aiohttp==3.9.5
+requests==2.32.3
+
+# File Processing
+PyMuPDF==1.24.5
+python-docx==1.1.2
+Pillow==10.4.0
+
+# Web Search
+beautifulsoup4==4.12.3
 
 # Email
 sendgrid==6.11.0
 
-# Utilities
-pandas==2.1.4
-numpy==1.26.2
-python-magic==0.4.27  # File type detection
+# Currency & Data
+pandas==2.2.2
+numpy==1.26.4
 
-# Logging
+# Database & Session (Optional)
+redis==5.0.7
+
+# Logging & Utils
 loguru==0.7.2
 
-# Session management
-redis==5.0.1  # Optional: for session storage
-
-# Development
-pytest==7.4.3
-black==23.12.0
-flake8==6.1.0
+# Development & Testing
+pytest==8.2.2
